--- a/index.html
+++ b/index.html
@@ -97,16 +97,22 @@
     }
 
     .container {
-      background: rgba(0, 20, 40, 0.9);
-      padding: 40px 50px;
-      border-radius: 20px;
-      width: 85%;
-      max-width: 700px;
-      margin: 0 auto;
-      box-shadow: 0 0 40px rgba(0, 200, 255, 0.4);
-      position: relative;
-      z-index: 2;
+  background: rgba(0, 20, 40, 0.9);
+  padding: 40px 50px;
+  border-radius: 20px;
+  width: 85%;
+  max-width: 700px;
+  margin: 0 auto;
+  box-shadow: 0 0 40px rgba(0, 200, 255, 0.4);
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
     }
+
 
     .question {
       font-family: 'Orbitron', sans-serif;
