--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <input type="text" class="answer-box" id="answerInput" placeholder="ENTER YOUR ANSWER..." autocomplete="off">
     <button id="submitBtn">SUBMIT</button>
     <div class="response" id="response"></div>
-    <div class="code-display" id="codeDisplay">WV91ciBDT0RFOiBYSzdCOVAyUg==</div>
+    <div class="code-display" id="codeDisplay">Your code: TheDeepOceanNight20189</div>
   </div>
 
   <script>
